@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2018 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,10 +19,8 @@ package org.jkiss.dbeaver.tools.transfer.registry;
 
 import org.eclipse.core.runtime.IAdaptable;
 import org.eclipse.core.runtime.IConfigurationElement;
-import org.eclipse.jface.wizard.IWizardPage;
 import org.jkiss.code.NotNull;
 import org.jkiss.dbeaver.DBException;
-import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DBIcon;
 import org.jkiss.dbeaver.model.DBPImage;
 import org.jkiss.dbeaver.model.impl.AbstractDescriptor;
@@ -30,6 +28,7 @@ import org.jkiss.dbeaver.model.struct.DBSObject;
 import org.jkiss.dbeaver.tools.transfer.IDataTransferNode;
 import org.jkiss.dbeaver.tools.transfer.IDataTransferSettings;
 import org.jkiss.utils.ArrayUtils;
+import org.jkiss.utils.CommonUtils;
 
 import java.util.*;
 
@@ -38,8 +37,6 @@ import java.util.*;
  */
 public class DataTransferNodeDescriptor extends AbstractDescriptor
 {
-    private static final Log log = Log.getLog(DataTransferNodeDescriptor.class);
-
     public enum NodeType {
         PRODUCER,
         CONSUMER
@@ -56,7 +53,6 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
     private final ObjectType implType;
     private final ObjectType settingsType;
     private final List<ObjectType> sourceTypes = new ArrayList<>();
-    private final List<DataTransferPageDescriptor> pageTypes = new ArrayList<>();
     private final List<DataTransferProcessorDescriptor> processors = new ArrayList<>();
 
     public DataTransferNodeDescriptor(IConfigurationElement config)
@@ -67,31 +63,33 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
         this.name = config.getAttribute("label");
         this.description = config.getAttribute("description");
         this.icon = iconToImage(config.getAttribute("icon"), DBIcon.TYPE_UNKNOWN);
-        this.nodeType = NodeType.valueOf(config.getAttribute("type").toUpperCase(Locale.ENGLISH));
+        this.nodeType = CommonUtils.valueOf(NodeType.class, config.getAttribute("type").toUpperCase(Locale.ENGLISH), NodeType.PRODUCER);
         this.implType = new ObjectType(config.getAttribute("class"));
         this.settingsType = new ObjectType(config.getAttribute("settings"));
+
+        for (IConfigurationElement typeCfg : ArrayUtils.safeArray(config.getChildren("sourceType"))) {
+            sourceTypes.add(new ObjectType(typeCfg.getAttribute("type")));
+        }
 
         loadNodeConfigurations(config);
     }
 
     void loadNodeConfigurations(IConfigurationElement config) {
-        for (IConfigurationElement typeCfg : ArrayUtils.safeArray(config.getChildren("sourceType"))) {
-            sourceTypes.add(new ObjectType(typeCfg.getAttribute("type")));
-        }
-        for (IConfigurationElement pageConfig : ArrayUtils.safeArray(config.getChildren("page"))) {
-            pageTypes.add(new DataTransferPageDescriptor(pageConfig));
-        }
+        List<DataTransferProcessorDescriptor> procList = new ArrayList<>();
         for (IConfigurationElement processorConfig : ArrayUtils.safeArray(config.getChildren("processor"))) {
-            processors.add(new DataTransferProcessorDescriptor(this, processorConfig));
+            procList.add(new DataTransferProcessorDescriptor(this, processorConfig));
         }
-        processors.sort(Comparator.comparing(DataTransferProcessorDescriptor::getName));
+        procList.sort(Comparator.comparing(DataTransferProcessorDescriptor::getName));
+        this.processors.addAll(procList);
     }
 
+    @NotNull
     public String getId()
     {
         return id;
     }
 
+    @NotNull
     public String getName()
     {
         return name;
@@ -117,7 +115,7 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
     {
         implType.checkObjectClass(IDataTransferNode.class);
         try {
-            return implType.getObjectClass(IDataTransferNode.class).newInstance();
+            return implType.getObjectClass(IDataTransferNode.class).getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             throw new DBException("Can't create data transformer node", e);
         }
@@ -127,40 +125,10 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
     {
         settingsType.checkObjectClass(IDataTransferSettings.class);
         try {
-            return settingsType.getObjectClass(IDataTransferSettings.class).newInstance();
+            return settingsType.getObjectClass(IDataTransferSettings.class).getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             throw new DBException("Can't create node settings", e);
         }
-    }
-
-    public List<DataTransferPageDescriptor> patPageDescriptors() {
-        return pageTypes;
-    }
-
-    public DataTransferPageDescriptor getPageDescriptor(IWizardPage page) {
-        for (DataTransferPageDescriptor pd : pageTypes) {
-            if (pd.getPageType().getImplName().equals(page.getClass().getName())) {
-                return pd;
-            }
-        }
-        return null;
-    }
-
-    public IWizardPage[] createWizardPages(boolean consumerOptional, boolean producerOptional)
-    {
-        List<IWizardPage> pages = new ArrayList<>();
-        for (DataTransferPageDescriptor page : pageTypes) {
-            if (page.isConsumerSelector() && !consumerOptional) continue;
-            if (page.isProducerSelector() && !producerOptional) continue;
-            try {
-                ObjectType type = page.getPageType();
-                type.checkObjectClass(IWizardPage.class);
-                pages.add(type.getObjectClass(IWizardPage.class).newInstance());
-            } catch (Throwable e) {
-                log.error("Can't create wizard page", e);
-            }
-        }
-        return pages.toArray(new IWizardPage[pages.size()]);
     }
 
     public NodeType getNodeType()
@@ -185,8 +153,12 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
         return false;
     }
 
-    public List<DataTransferProcessorDescriptor> getProcessors() {
-        return processors;
+    public boolean hasProcessors() {
+        return !processors.isEmpty();
+    }
+
+    public DataTransferProcessorDescriptor[] getProcessors() {
+        return processors.toArray(new DataTransferProcessorDescriptor[0]);
     }
 
     /**
@@ -194,8 +166,7 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
      * @param sourceObjects object types
      * @return list of editors
      */
-    public Collection<DataTransferProcessorDescriptor> getAvailableProcessors(Collection<DBSObject> sourceObjects)
-    {
+    public List<DataTransferProcessorDescriptor> getAvailableProcessors(Collection<DBSObject> sourceObjects) {
         List<DataTransferProcessorDescriptor> editors = new ArrayList<>();
         for (DataTransferProcessorDescriptor descriptor : processors) {
             boolean supports = true;
@@ -218,6 +189,16 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
             }
         }
         return editors;
+    }
+
+    public List<DataTransferProcessorDescriptor> getAvailableProcessors(Class<?> objectType) {
+        List<DataTransferProcessorDescriptor> procList = new ArrayList<>();
+        for (DataTransferProcessorDescriptor descriptor : this.processors) {
+            if (descriptor.appliesToType(objectType)) {
+                procList.add(descriptor);
+            }
+        }
+        return procList;
     }
 
     public DataTransferProcessorDescriptor getProcessor(String id)
