@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2017 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,14 +19,16 @@ package org.jkiss.dbeaver.ext.generic.model.meta;
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.jkiss.code.NotNull;
 import org.jkiss.dbeaver.DBException;
-import org.jkiss.dbeaver.ext.generic.model.meta.GenericMetaModel;
-import org.jkiss.dbeaver.ext.generic.model.meta.GenericMetaObject;
+import org.jkiss.dbeaver.ext.generic.model.GenericSQLDialect;
 import org.jkiss.dbeaver.model.impl.AbstractDescriptor;
-import org.jkiss.dbeaver.registry.RegistryConstants;
+import org.jkiss.dbeaver.model.sql.SQLDialectMetadata;
+import org.jkiss.dbeaver.model.sql.registry.SQLDialectRegistry;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 public class GenericMetaModelDescriptor extends AbstractDescriptor {
@@ -38,19 +40,22 @@ public class GenericMetaModelDescriptor extends AbstractDescriptor {
     private String id;
     private final Map<String, GenericMetaObject> objects = new HashMap<>();
     private String[] driverClass;
+    private final String dialectId;
+    private List<String> modelReplacements;
 
     public GenericMetaModelDescriptor() {
         super("org.jkiss.dbeaver.ext.generic");
         implType = new ObjectType(GenericMetaModel.class.getName());
         instance = new GenericMetaModel();
         instance.descriptor = this;
+        dialectId = GenericSQLDialect.GENERIC_DIALECT_ID;
     }
 
     public GenericMetaModelDescriptor(IConfigurationElement cfg) {
         super(cfg);
         this.contributorConfig = cfg;
 
-        this.id = cfg.getAttribute(RegistryConstants.ATTR_ID);
+        this.id = cfg.getAttribute("id");
         IConfigurationElement[] objectList = cfg.getChildren("object");
         if (!ArrayUtils.isEmpty(objectList)) {
             for (IConfigurationElement childConfig : objectList) {
@@ -66,6 +71,16 @@ public class GenericMetaModelDescriptor extends AbstractDescriptor {
         }
 
         implType = new ObjectType(cfg.getAttribute("class"));
+        dialectId = CommonUtils.toString(cfg.getAttribute("dialect"), GenericSQLDialect.GENERIC_DIALECT_ID);
+
+        IConfigurationElement[] replaceElements = cfg.getChildren("replace");
+        for (IConfigurationElement replace : replaceElements) {
+            String modelId = replace.getAttribute("model");
+            if (modelReplacements == null) {
+                modelReplacements = new ArrayList<>();
+            }
+            modelReplacements.add(modelId);
+        }
     }
 
     public String getId()
@@ -83,6 +98,18 @@ public class GenericMetaModelDescriptor extends AbstractDescriptor {
         return objects.get(id);
     }
 
+    public SQLDialectMetadata getDialect() {
+        return SQLDialectRegistry.getInstance().getDialect(dialectId);
+    }
+
+    public List<String> getModelReplacements() {
+        return CommonUtils.safeList(modelReplacements);
+    }
+
+    public void setModelReplacements(List<String> modelReplacements) {
+        this.modelReplacements = modelReplacements;
+    }
+
     public GenericMetaModel getInstance() throws DBException {
         if (instance != null) {
             return instance;
@@ -92,7 +119,7 @@ public class GenericMetaModelDescriptor extends AbstractDescriptor {
             throw new DBException("Can't create generic meta model instance '" + implType.getImplName() + "'");
         }
         try {
-            instance = implClass.newInstance();
+            instance = implClass.getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             throw new DBException("Can't instantiate meta model", e);
         }
