@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2017 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,7 @@
  */
 package org.jkiss.dbeaver.model.impl;
 
-import org.apache.commons.jexl2.Expression;
-import org.apache.commons.jexl2.JexlContext;
-import org.apache.commons.jexl2.JexlEngine;
-import org.apache.commons.jexl2.JexlException;
+import org.apache.commons.jexl3.*;
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.Platform;
 import org.jkiss.code.NotNull;
@@ -31,6 +28,7 @@ import org.jkiss.dbeaver.model.DBPImage;
 import org.jkiss.utils.CommonUtils;
 import org.osgi.framework.Bundle;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -46,18 +44,53 @@ public abstract class AbstractDescriptor {
 
     private static JexlEngine jexlEngine;
 
-    public static Expression parseExpression(String exprString) throws DBException
+    public static JexlExpression parseExpression(String exprString) throws DBException
     {
         synchronized (AbstractDescriptor.class) {
             if (jexlEngine == null) {
-                jexlEngine = new JexlEngine(null, null, null, null);
-                jexlEngine.setCache(100);
+                jexlEngine = new JexlBuilder().cache(100).create();
             }
         }
         try {
             return jexlEngine.createExpression(exprString);
         } catch (JexlException e) {
             throw new DBException("Bad expression", e);
+        }
+    }
+
+    public static JexlContext makeContext(final Object object, final Object context)
+    {
+        return new JexlContext() {
+            @Override
+            public Object get(String name)
+            {
+                return name.equals(VAR_OBJECT) ? object :
+                        (name.equals(VAR_CONTEXT) ? context : null); //$NON-NLS-1$
+            }
+
+            @Override
+            public void set(String name, Object value)
+            {
+                log.warn("Set is not implemented"); //$NON-NLS-1$
+            }
+
+            @Override
+            public boolean has(String name)
+            {
+                return
+                        name.equals(VAR_OBJECT) && object != null || //$NON-NLS-1$
+                                name.equals(VAR_CONTEXT) && context != null; //$NON-NLS-1$
+            }
+        };
+    }
+
+    public static Object evalExpression(String exprString, Object object, Object context) {
+        try {
+            JexlExpression expression = AbstractDescriptor.parseExpression(exprString);
+            return expression.evaluate(AbstractDescriptor.makeContext(object, context));
+        } catch (DBException e) {
+            log.error("Bad expression: " + exprString, e);
+            return null;
         }
     }
 
@@ -68,7 +101,7 @@ public abstract class AbstractDescriptor {
 
         private final String implName;
         private Class<?> implClass;
-        private Expression expression;
+        private JexlExpression expression;
         private boolean forceCheck;
 
         public ObjectType(String implName)
@@ -137,8 +170,13 @@ public abstract class AbstractDescriptor {
                 return false;
             }
             if (expression != null) {
-                Object result = expression.evaluate(makeContext(object, context));
-                return Boolean.TRUE.equals(result);
+                try {
+                    Object result = expression.evaluate(makeContext(object, context));
+                    return Boolean.TRUE.equals(result);
+                } catch (Exception e) {
+                    log.debug("Error evaluating expression '" + expression + "'", e);
+                    return false;
+                }
             }
             return true;
         }
@@ -154,8 +192,8 @@ public abstract class AbstractDescriptor {
                 throw new DBException("Can't load class '" + getImplName() + "'");
             }
             try {
-                return objectClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                return objectClass.getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new DBException("Can't instantiate class '" + getImplName() + "'", e);
             }
         }
@@ -171,32 +209,6 @@ public abstract class AbstractDescriptor {
             }
             getObjectClass();
             return implClass != null && implClass.isAssignableFrom(clazz);
-        }
-
-        private JexlContext makeContext(final Object object, final Object context)
-        {
-            return new JexlContext() {
-                @Override
-                public Object get(String name)
-                {
-                    return name.equals(VAR_OBJECT) ? object :
-                        (name.equals(VAR_CONTEXT) ? context : null); //$NON-NLS-1$
-                }
-
-                @Override
-                public void set(String name, Object value)
-                {
-                    log.warn("Set is not implemented"); //$NON-NLS-1$
-                }
-
-                @Override
-                public boolean has(String name)
-                {
-                    return
-                        name.equals(VAR_OBJECT) && object != null || //$NON-NLS-1$
-                        name.equals(VAR_CONTEXT) && context != null; //$NON-NLS-1$
-                }
-            };
         }
 
         @Override
@@ -267,7 +279,7 @@ public abstract class AbstractDescriptor {
     }
 
     @Nullable
-    protected DBPImage iconToImage(String icon)
+    public DBPImage iconToImage(String icon)
     {
         if (CommonUtils.isEmpty(icon)) {
             return null;
@@ -298,7 +310,7 @@ public abstract class AbstractDescriptor {
         try {
             objectClass = fromBundle.loadClass(className);
         } catch (Throwable ex) {
-            log.error("Can't determine object class '" + className + "'", ex);
+            log.error("Can't determine object class '" + className + "': " + ex.getMessage());
             return null;
         }
 
