@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2017 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,17 +16,21 @@
  */
 package org.jkiss.dbeaver.runtime.properties;
 
-import org.eclipse.core.runtime.Platform;
+import org.eclipse.core.internal.runtime.Activator;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.model.DBPPersistedObject;
+import org.jkiss.dbeaver.model.exec.DBExecUtils;
+import org.jkiss.dbeaver.model.impl.AbstractDescriptor;
 import org.jkiss.dbeaver.model.meta.IPropertyValueListProvider;
 import org.jkiss.dbeaver.model.meta.IPropertyValueTransformer;
+import org.jkiss.dbeaver.model.meta.IPropertyValueValidator;
 import org.jkiss.dbeaver.model.meta.Property;
 import org.jkiss.dbeaver.model.preferences.DBPPropertyDescriptor;
 import org.jkiss.dbeaver.model.preferences.DBPPropertySource;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.runtime.VoidProgressMonitor;
+import org.jkiss.dbeaver.model.struct.DBSObject;
 import org.jkiss.utils.BeanUtils;
 import org.jkiss.utils.CommonUtils;
 import org.osgi.framework.Bundle;
@@ -38,7 +42,9 @@ import java.lang.reflect.Method;
 import java.text.DecimalFormat;
 import java.text.Format;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Date;
+import java.util.List;
 import java.util.ResourceBundle;
 
 /**
@@ -52,6 +58,7 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
     private Method setter;
     private IPropertyValueTransformer valueTransformer;
     private IPropertyValueTransformer valueRenderer;
+    private IPropertyValueValidator valueValidator;
     private final Class<?> declaringClass;
     private Format displayFormat = null;
 
@@ -59,7 +66,8 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
         DBPPropertySource source,
         ObjectPropertyGroupDescriptor parent,
         Property propInfo,
-        Method getter)
+        Method getter,
+        String locale)
     {
         super(source, parent, getter, propInfo.id(), propInfo.order());
         this.propInfo = propInfo;
@@ -78,9 +86,9 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
 
         // Obtain value transformer
         Class<? extends IPropertyValueTransformer> valueTransformerClass = propInfo.valueTransformer();
-        if (valueTransformerClass != null && valueTransformerClass != IPropertyValueTransformer.class) {
+        if (valueTransformerClass != IPropertyValueTransformer.class) {
             try {
-                valueTransformer = valueTransformerClass.newInstance();
+                valueTransformer = valueTransformerClass.getConstructor().newInstance();
             } catch (Throwable e) {
                 log.warn("Can't create value transformer", e);
             }
@@ -88,18 +96,28 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
 
         // Obtain value transformer
         Class<? extends IPropertyValueTransformer> valueRendererClass = propInfo.valueRenderer();
-        if (valueRendererClass != null && valueRendererClass != IPropertyValueTransformer.class) {
+        if (valueRendererClass != IPropertyValueTransformer.class) {
             try {
-                valueRenderer = valueRendererClass.newInstance();
+                valueRenderer = valueRendererClass.getConstructor().newInstance();
             } catch (Throwable e) {
                 log.warn("Can't create value renderer", e);
             }
         }
 
-        this.propName = getLocalizedString(propInfo.name(), Property.RESOURCE_TYPE_NAME, getId(), !propInfo.hidden());
+        // Obtain value validator
+        Class<? extends IPropertyValueValidator> valueValidatorClass = propInfo.valueValidator();
+        if (valueValidatorClass != IPropertyValueValidator.class) {
+            try {
+                valueValidator = valueValidatorClass.getConstructor().newInstance();
+            } catch (Throwable e) {
+                log.warn("Can't create value validator", e);
+            }
+        }
+
+        this.propName = getLocalizedString(propInfo.name(), Property.RESOURCE_TYPE_NAME, getId(), !propInfo.hidden(), locale);
         this.propDescription = CommonUtils.isEmpty(propInfo.description()) ?
                 propName :
-                getLocalizedString(propInfo.name(), Property.RESOURCE_TYPE_DESCRIPTION, propName, false);
+                getLocalizedString(propInfo.name(), Property.RESOURCE_TYPE_DESCRIPTION, propName, false, locale);
     }
 
     @Override
@@ -123,20 +141,27 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
         return propInfo.expensive();
     }
 
-    public boolean isNumeric()
-    {
+    public boolean isNumeric() {
         Class<?> propType = getGetter().getReturnType();
         return propType != null && BeanUtils.isNumericType(propType);
     }
 
-    public boolean isDateTime()
-    {
+    public boolean isDateTime() {
         Class<?> propType = getGetter().getReturnType();
         return propType != null && Date.class.isAssignableFrom(propType);
     }
 
+    public boolean isBoolean() {
+        Class<?> propType = getGetter().getReturnType();
+        return propType == Boolean.class || propType == Boolean.TYPE;
+    }
+
     public boolean isMultiLine() {
         return propInfo.multiline();
+    }
+
+    public boolean isSpecific() {
+        return propInfo.specific();
     }
 
     public boolean isOptional() {
@@ -147,9 +172,17 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
         return propInfo.linkPossible();
     }
 
+    public boolean isHref() {
+        return propInfo.href();
+    }
+
     public boolean supportsPreview()
     {
         return propInfo.supportsPreview();
+    }
+
+    public boolean isPassword() {
+        return propInfo.password();
     }
 
     public IPropertyValueTransformer getValueTransformer()
@@ -161,6 +194,23 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
         return valueRenderer;
     }
 
+    public IPropertyValueValidator getValueValidator() {
+        return valueValidator;
+    }
+
+    public boolean isPropertyVisible(Object object, Object value) {
+        Class<? extends IPropertyValueValidator> visiblityCheckerClass = propInfo.visibleIf();
+        if (visiblityCheckerClass != IPropertyValueValidator.class) {
+            try {
+                IPropertyValueValidator checker = visiblityCheckerClass.getConstructor().newInstance();
+                return checker.isValidValue(object, value);
+            } catch (Throwable e) {
+                log.debug(e);
+            }
+        }
+        return true;
+    }
+
     @Override
     public boolean isEditable(Object object)
     {
@@ -169,7 +219,81 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
             return false;
         }
         // Read-only or non-updatable property for non-new object
-        return isNewObject(object) ? propInfo.editable() : propInfo.updatable();
+        return getEditableValue(object);
+    }
+
+    @Nullable
+    @Override
+    public String[] getFeatures() {
+        List<String> features = new ArrayList<>();
+        if (this.isRequired()) features.add("required");
+        if (this.isSpecific()) features.add("specific");
+        if (this.isOptional()) features.add("optional");
+        if (this.isHidden()) features.add("hidden");
+        if (this.isRemote()) features.add("remote");
+
+        if (this.isDateTime()) features.add("datetme");
+        if (this.isNumeric()) features.add("numeric");
+        if (this.isNameProperty()) features.add("name");
+
+        if (this.isMultiLine()) features.add("multiline");
+        if (this.isExpensive()) features.add("expensive");
+        if (this.isEditPossible()) features.add("editPossible");
+        if (this.isLinkPossible()) features.add("linkPossible");
+        if (this.isHref()) features.add("href");
+        if (this.isViewable()) features.add("viewable");
+        if (this.isPassword()) features.add("password");
+        return features.toArray(new String[0]);
+    }
+
+    @Override
+    public boolean hasFeature(@NotNull String feature) {
+        switch (feature) {
+            case "required":
+                return this.isRequired();
+            case "specific":
+                return this.isSpecific();
+            case "optional":
+                return this.isOptional();
+            case "hidden":
+                return this.isHidden();
+
+            case "datetme":
+                return this.isDateTime();
+            case "numeric":
+                return this.isNumeric();
+            case "name":
+                return this.isNameProperty();
+
+            case "multiline":
+                return this.isMultiLine();
+            case "expensive":
+                return this.isExpensive();
+            case "editPossible":
+                return this.isEditPossible();
+            case "linkPossible":
+                return this.isLinkPossible();
+            case "viewable":
+                return this.isViewable();
+            case "password":
+                return this.isPassword();
+        }
+        return false;
+    }
+
+    private boolean getEditableValue(Object object)
+    {
+        boolean isNew = isNewObject(object);
+        String expr = isNew ? propInfo.editableExpr() : propInfo.updatableExpr();
+        if (!expr.isEmpty()) {
+            return Boolean.TRUE.equals(evaluateExpression(object, expr));
+        } else {
+            return isNew ? propInfo.editable() : propInfo.updatable();
+        }
+    }
+
+    private Object evaluateExpression(Object object, String exprString) {
+        return AbstractDescriptor.evalExpression(exprString, object, this);
     }
 
     public boolean isEditPossible()
@@ -203,8 +327,18 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
 
     public Format getDisplayFormat() {
         if (displayFormat == null) {
+            Class<? extends Format> formatClass = propInfo.formatter();
+            if (formatClass != Format.class) {
+                try {
+                    displayFormat = formatClass.getConstructor().newInstance();
+                } catch (Throwable e) {
+                    log.error(e);
+                }
+            }
+        }
+        if (displayFormat == null) {
             final String format = propInfo.format();
-            if (format == null || format.isEmpty()) {
+            if (format.isEmpty()) {
                 return null;
             }
             if (isNumeric()) {
@@ -219,7 +353,7 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
         return displayFormat;
     }
 
-    public Object readValue(Object object, @Nullable DBRProgressMonitor progressMonitor)
+    public Object readValue(Object object, @Nullable DBRProgressMonitor progressMonitor, boolean formatValue)
         throws IllegalAccessException, IllegalArgumentException, InvocationTargetException
     {
         if (object == null) {
@@ -233,10 +367,9 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
             }
         }
         Method getter = getGetter();
-        Object[] params = null;
-        if (getter.getParameterCount() > 0) {
-            params = new Object[getter.getParameterCount()];
-        }
+        Object[] params = getter.getParameterCount() > 0 ?
+            new Object[getter.getParameterCount()] : null;
+
         if (isLazy() && params != null) {
             // Lazy (probably cached)
             if (isLazy(object, true) && progressMonitor == null && !supportsPreview()) {
@@ -244,15 +377,39 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
             }
             params[0] = progressMonitor;
         }
-        value = getter.invoke(object, params);
+        if (progressMonitor != null && isLazy() && object instanceof DBSObject) {
+            Object finalObject = object;
+            Object[] finalResult = new Object[1];
+            try {
+                DBExecUtils.tryExecuteRecover(progressMonitor, ((DBSObject) object).getDataSource(), param -> {
+                    try {
+                        finalResult[0] = getter.invoke(finalObject, params);
+                    } catch (Exception e) {
+                        throw new InvocationTargetException(e);
+                    }
+                });
+            } catch (Exception e) {
+                throw new InvocationTargetException(e);
+            }
+            value = finalResult[0];
+        } else {
+            value = getter.invoke(object, params);
+        }
 
+        if (formatValue) {
+            value = formatValue(object, value);
+        }
+        return value;
+    }
+
+    public Object formatValue(Object object, Object value) {
         if (valueRenderer != null) {
             value = valueRenderer.transform(object, value);
         }
         if (value instanceof Number) {
             final Format displayFormat = getDisplayFormat();
             if (displayFormat != null) {
-                return displayFormat.format(value);
+                value = displayFormat.format(value);
             }
         }
         return value;
@@ -283,7 +440,7 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
                 } else if (argType == Short.TYPE) {
                     value = (short)0;
                 } else if (argType == Long.TYPE) {
-                    value = 0l;
+                    value = 0L;
                 } else if (argType == Float.TYPE) {
                     value = (float)0.0;
                 } else if (argType == Double.TYPE) {
@@ -330,7 +487,7 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
         if (propInfo.listProvider() != IPropertyValueListProvider.class) {
             // List
             try {
-                return propInfo.listProvider().newInstance().allowCustomValue();
+                return propInfo.listProvider().getConstructor().newInstance().allowCustomValue();
             } catch (Exception e) {
                 log.error(e);
             }
@@ -348,12 +505,15 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
         if (propInfo.listProvider() != IPropertyValueListProvider.class) {
             // List
             try {
-                return propInfo.listProvider().newInstance().getPossibleValues(object);
+                return propInfo.listProvider().getConstructor().newInstance().getPossibleValues(object);
             } catch (Exception e) {
                 log.error(e);
             }
-        } else if (getDataType().isEnum()) {
-            return getDataType().getEnumConstants();
+        } else {
+            Class<?> dataType = getDataType();
+            if (dataType != null && dataType.isEnum()) {
+                return dataType.getEnumConstants();
+            }
         }
         return null;
     }
@@ -372,20 +532,20 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
             CommonUtils.equalObjects(getGetter(), ((ObjectPropertyDescriptor)obj).getGetter());
     }
 
-    private String getLocalizedString(String string, String type, String defaultValue, boolean warnMissing) {
+    private String getLocalizedString(String string, String type, String defaultValue, boolean warnMissing, String locale) {
         if (Property.DEFAULT_LOCAL_STRING.equals(string)) {
             Method getter = getGetter();
             String propertyName = BeanUtils.getPropertyNameFromGetter(getter.getName());
             Class<?> propOwner = getter.getDeclaringClass();
             Bundle bundle = FrameworkUtil.getBundle(propOwner);
-            ResourceBundle resourceBundle = Platform.getResourceBundle(bundle);
+            ResourceBundle resourceBundle = getPluginResourceBundle(bundle, propOwner, locale);
             String messageID = "meta." + propOwner.getName() + "." + propertyName + "." + type;
             String result = null;
             try {
                 result = resourceBundle.getString(messageID);
             } catch (Exception e) {
                 // Try to find the same property in parent classes
-                for (Class parent = getter.getDeclaringClass().getSuperclass(); parent != null && parent != Object.class; parent = parent.getSuperclass()) {
+                for (Class<?> parent = getter.getDeclaringClass().getSuperclass(); parent != null && parent != Object.class; parent = parent.getSuperclass()) {
                     try {
                         Method parentGetter = parent.getMethod(getter.getName(), getter.getParameterTypes());
                         Class<?> parentOwner = parentGetter.getDeclaringClass();
@@ -393,7 +553,7 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
                         if (parentBundle == null || parentBundle == bundle) {
                             continue;
                         }
-                        ResourceBundle parentResourceBundle = Platform.getResourceBundle(parentBundle);
+                        ResourceBundle parentResourceBundle = getPluginResourceBundle(parentBundle, parentOwner, locale);
                         messageID = "meta." + parentOwner.getName() + "." + propertyName + "." + type;
                         try {
                             result = parentResourceBundle.getString(messageID);
@@ -401,7 +561,7 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
                         } catch (Exception e1) {
                             // Just skip it
                         }
-                    } catch (NoSuchMethodException e1) {
+                    } catch (Exception e1) {
                         // Just skip it
                     }
                 }
@@ -418,6 +578,13 @@ public class ObjectPropertyDescriptor extends ObjectAttributeDescriptor implemen
             return defaultValue;
         }
         return string;
+    }
+
+    private ResourceBundle getPluginResourceBundle(Bundle bundle, Class<?> ownerClass, String language) {
+        return Activator.getDefault().getLocalization(bundle, language);
+        // Copied from ResourceTranslator.getResourceBundle
+//        Locale locale = (language == null) ? Locale.getDefault() : new Locale(language);
+//        return ResourceBundle.getBundle("plugin", locale, ownerClass.getClassLoader()); //$NON-NLS-1$
     }
 
 
